Fix some layout issues

--- a/src/main/resources/gate/Gate.css
+++ b/src/main/resources/gate/Gate.css
@@ -1089,6 +1089,17 @@ table tr td > input[type='password']:only-child {
   height: 32px;
   text-indent: 4px;
 }
+table tr td > form {
+  height: 32px;
+}
+table tr td > form > select:only-child,
+table tr td > form > textarea:only-child,
+table tr td > form > input[type='text']:only-child,
+table tr td > form > input[type='password']:only-child {
+  width: 100%;
+  height: 32px;
+  text-indent: 4px;
+}
 table tr td.TOOLTIP {
   color: blue;
   padding: 12px;
